--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,71 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+#app-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  height: 100%;
+  width: 100%;
+}
+#controls-window {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  width: 20rem;
+  height: 100%;
+  background-color: aqua;
+}
+.setting-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+  padding: 0.5rem;
+  background-color: beige;
+}
+#map-preview-window {
+  position: relative;
+  display: block;
+  flex-grow: 1;
+  height: 100%;
+  background-color: brown;
+}
+#canvas-wrapper {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: min-content;
+  height: min-content;
+  box-sizing: border-box;
+  border: 1px solid black;
+}
+#map-preview-controls {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+  height: 5rem;
+}
+#map-preview-controls button {
+  width: 5rem;
+  height: 5rem;
+  font-size: 3rem;
+  background-color: lightgray;
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+#map-preview-controls button:hover {
+  background-color: lightgreen;
+}
+#map-preview-controls button:active {
+  background-color: lightblue;
 }
