--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,20 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+html,
+body,
+#root {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
+  font-size: calc(0.5vw + 0.5vh);
+  background-color: darkslategray;
+}
+div {
+  box-sizing: border-box;
+}
+canvas {
+  display: block;
+}
