--- a/src/App.css
+++ b/src/App.css
@@ -28,22 +28,27 @@
   background-color: beige;
 }
 #map-preview-window {
-  position: relative;
   display: block;
+  position: relative;
   flex-grow: 1;
   height: 100%;
   background-color: brown;
 }
-#canvas-wrapper {
-  position: absolute;
-  left: 0;
-  top: 0;
+#map-canvas-wrapper {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
+  overflow: hidden;
+}
+#map-canvas-draggable {
   width: min-content;
   height: min-content;
-  box-sizing: border-box;
-  border: 1px solid black;
+  position: relative;
+  top: 0;
+  left: 0;
 }
-#map-preview-controls {
+#map-controls {
   position: absolute;
   bottom: 0;
   display: flex;
@@ -54,7 +59,7 @@
   width: 100%;
   height: 5rem;
 }
-#map-preview-controls button {
+#map-controls button {
   width: 5rem;
   height: 5rem;
   font-size: 3rem;
@@ -63,10 +68,10 @@
   border-radius: 0.5rem;
   cursor: pointer;
 }
-#map-preview-controls button:hover {
+#map-controls button:hover {
   background-color: lightgreen;
 }
-#map-preview-controls button:active {
+#map-controls button:active {
   background-color: lightblue;
 }
 .is-invalid {
