Move App component contents to new PerlinNoiseMap component Remove ControlsWindow component and move it's contents to PerlinNoiseMap Move validation functions do new validators.ts file

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,12 @@
   font-synthesis: none;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --background-color: #404040;
+  --foreground-color: #808080;
+  --element-color: #c0c0c0;
+  --font-color: #202020;
+  --hover-color: #a0a0a0;
+  --active-color: #808080;
 }
 html,
 body,
@@ -13,11 +19,15 @@ body,
   height: 100vh;
   width: 100vw;
   font-size: calc(0.5vw + 0.5vh);
-  background-color: darkslategray;
+  color: var(--font-color);
+  background-color: var(--background-color);
 }
 div {
   box-sizing: border-box;
 }
 canvas {
   display: block;
+}
+input[type="checkbox"], select, option {
+  cursor: pointer;
 }
