--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#app-wrapper {
+#generator-wrapper {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -15,7 +15,7 @@
   gap: 1rem;
   width: 20rem;
   height: 100%;
-  background-color: aqua;
+  background-color: var(--foreground-color);
 }
 .setting-row {
   display: flex;
@@ -25,20 +25,19 @@
   gap: 1rem;
   width: 100%;
   padding: 0.5rem;
-  background-color: beige;
+  background-color: var(--element-color);
 }
 #map-preview-window {
   display: block;
   position: relative;
   flex-grow: 1;
   height: 100%;
-  background-color: brown;
+  background-color: var(--foreground-color);
 }
 #map-canvas-wrapper {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  border: 1px solid black;
   overflow: hidden;
 }
 #map-canvas-draggable {
@@ -63,16 +62,17 @@
   width: 5rem;
   height: 5rem;
   font-size: 3rem;
-  background-color: lightgray;
+  color: var(--font-color);
+  background-color: var(--element-color);
   border: none;
   border-radius: 0.5rem;
   cursor: pointer;
 }
 #map-controls button:hover {
-  background-color: lightgreen;
+  background-color: var(--hover-color);
 }
 #map-controls button:active {
-  background-color: lightblue;
+  background-color: var(--active-color);
 }
 .is-invalid {
   outline: 2px solid red;
