--- a/src/App.css
+++ b/src/App.css
@@ -34,13 +34,13 @@
   height: 100%;
   background-color: var(--foreground-color);
 }
-#map-canvas-wrapper {
+#canvas-dragarea {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
-#map-canvas-draggable {
+#canvas-draggable-wrapper {
   width: min-content;
   height: min-content;
   position: relative;
