--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+input[type="color"] {
+  /* width: 50%; */
+  padding: 0;
+  margin: 0;
+  border: none;
+  cursor: pointer;
+}
 #variant-selection-wrapper {
   display: block;
   position: absolute;
@@ -11,7 +18,6 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
   height: 100%;
   width: 100%;
 }
@@ -21,7 +27,7 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  width: 25rem;
+  width: 20%;
   height: 100%;
   background-color: var(--foreground-color);
 }
@@ -38,7 +44,8 @@
 #map-preview-window {
   display: block;
   position: relative;
-  flex-grow: 1;
+  padding-left: 1rem;
+  width: 80%;
   height: 100%;
   background-color: var(--foreground-color);
 }
