--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   --hover-color: #a0a0a0;
   --active-color: #808080;
 }
+
 html,
 body,
 #root {
@@ -22,12 +23,17 @@ body,
   color: var(--font-color);
   background-color: var(--background-color);
 }
+
 div {
   box-sizing: border-box;
 }
+
 canvas {
   display: block;
 }
-input[type="checkbox"], select, option {
+
+input[type="checkbox"],
+select,
+option {
   cursor: pointer;
 }
